--- a/templates/layout/master.html
+++ b/templates/layout/master.html
@@ -13,7 +13,8 @@
     <!-- Canonical SEO -->
     <link rel="canonical" href="{% get_theme_variables 'product_page' %}">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon/favicon.ico' %}" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{% static 'img/avatars/icono.png' %}" sizes="16x16" />
 
     <!-- Include the styles partial -->
     {% include is_front|yesno:"./partials/styles_front.html,./partials/styles.html" %}
